refactor(sdk): rate-limit drop logs, stable iteration order, null key check, latch-based no-op test
Agent-Logs-Url: https://github.com/Ben-Esquivel-Music/java-digital-audio-workstation/sessions/ab227f0a-593c-478b-8419-4e1eb1eb9129

Co-authored-by: BenEsquivelMusic <198515647+BenEsquivelMusic@users.noreply.github.com>